--- a/app.json
+++ b/app.json
@@ -5,7 +5,13 @@
     "slug": "linxhq",
     "privacy": "public",
     "sdkVersion": "30.0.0",
-    "platforms": ["ios", "android"],
+    "facebookScheme": "cc967f942100e4ef109a20179e4360ef",
+    "FacebookAppID": "173524459922759",
+    "facebookDisplayName": "timviec365.vn",
+    "platforms": [
+      "ios",
+      "android"
+    ],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
