--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-button": "^2.3.0",
+    "react-native-fbsdk": "^0.8.0",
+    "react-native-search-filter": "^0.1.4",
     "react-native-video": "^3.2.1",
     "react-navigation": "^2.16.0",
     "react-redux": "^5.0.7",
