--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "@expo/videoplayer": "^0.4.0",
     "axios": "^0.18.0",
     "expo": "^30.0.1",
     "react": "16.3.1",
